# easythread

./: pyproject.toml
src/easythread/: __init__.py  channel.py  executor.py  stop_flag.py  tasks.py
tests/: test_channels.py
