[project]
name = "easythread"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Nabeel Sherazi", email = "nabeelsherazi97@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "loguru>=0.7.3",
]

[project.scripts]
easythread = "easythread:main"

[build-system]
requires = ["uv_build>=0.8.8,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pyright>=1.1.403",
    "pytest>=8.4.1",
    "ruff>=0.12.9",
]
